# brrmmmm

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  mission.json  moon.yml
.github/workflows/: ci.yml
.moon/: toolchains.yml  workspace.yml
demos/: browser_login_fixture.wasm  captcha_solver.wasm  cli.tape  demo_weather_sidecar.wasm  google_search.wasm  params_sidecar.wasm  terminal.tape  tui.tape
docs/: frontend-protocol.md  mission-assurance.md  release-checklist.md
fixtures/browser-login/: Cargo.toml
fixtures/browser-login/src/: describe.json  lib.rs
fixtures/captcha-solver/: Cargo.toml
fixtures/captcha-solver/src/: describe.json  lib.rs
fixtures/deterministic-sidecar/: Cargo.toml  moon.yml
fixtures/deterministic-sidecar/src/: describe.json  lib.rs
fixtures/env-sidecar/: Cargo.toml
fixtures/env-sidecar/src/: describe.json  lib.rs
fixtures/google-search/: Cargo.toml
fixtures/google-search/src/: describe.json  lib.rs
fixtures/kv-sidecar/: Cargo.toml
fixtures/kv-sidecar/src/: describe.json  lib.rs
fixtures/operator-action-module/: Cargo.toml
fixtures/operator-action-module/src/: describe.json  lib.rs
fixtures/params-sidecar/: Cargo.toml
fixtures/params-sidecar/src/: describe.json  lib.rs
fixtures/raw-output-sidecar/: Cargo.toml
fixtures/raw-output-sidecar/src/: describe.json  lib.rs
fixtures/timeout-sidecar/: Cargo.toml
fixtures/timeout-sidecar/src/: describe.json  lib.rs
missions/demo-weather/: Cargo.toml  README.md  moon.yml
missions/demo-weather/src/: describe.json  lib.rs
sidecars/demo-weather/: Cargo.toml  README.md  moon.yml
sidecars/demo-weather/src/: describe.json  lib.rs
src/: app_config.rs  attestation.rs  cli.rs  cmd.rs  config.rs  error.rs  events.rs  identity.rs  lib.rs  main.rs  mission_ledger.rs  mission_result.rs  mission_state.rs  names.rs  params.rs  persistence.rs  tui.rs  utils.rs
src/abi/: mod.rs
src/cmd/: daemon.rs  explain.rs  hold.rs  inspect.rs  launch.rs  missions.rs  mod.rs  output.rs  params.rs  rehearse.rs  run.rs  validate.rs
src/controller/: inspection.rs  io.rs  mod.rs  runner.rs
src/controller/host_imports/: artifacts.rs  host_call.rs  mod.rs  network.rs  outcome.rs  params.rs  sleep.rs  tracing.rs  ua.rs
src/controller/host_imports/ai/: action.rs  execute.rs  mod.rs  response.rs  state.rs
src/controller/host_imports/browser/: action.rs  execute.rs  mod.rs  response.rs  state.rs
src/controller/host_imports/kv/: action.rs  mod.rs  response.rs  state.rs
src/controller/host_imports/network/: mod.rs  publish.rs  request.rs  (+2 more)
src/controller/io/: tests.rs
src/controller/runner/: tests.rs
src/daemon/: client.rs  mission.rs  mod.rs  protocol.rs  service.rs  tests.rs
src/host/: ai_request.rs  browser_request.rs  host_call.rs  host_request.rs  mod.rs
src/runner/: mod.rs
tests/: abi_serde.rs  ai_request.rs  artifact_store.rs  browser_request.rs  cli_commands.rs  events.rs  finish_line.rs  host_request.rs  kv_imports.rs  operator_escalation.rs  params.rs  persistence.rs  working_dir_config.rs
tui/: moon.yml  package-lock.json  package.json  tsconfig.json
tui/src/: app.tsx  format.ts  index.tsx  store.ts  stream.ts  types.ts
tui/src/__tests__/: format.test.ts  render.test.tsx  requestPanel.utils.test.ts  store.test.ts  stream.test.ts
tui/src/components/: ArtifactPane.tsx  ArtifactRow.tsx  EnvPanel.tsx  EventLog.tsx  Header.tsx  HelpDialog.tsx  PipeAnimation.tsx  PollStatus.tsx  RequestPanel.tsx  StatusBar.tsx
tui/src/hooks/: useCountdown.ts  useEventStream.ts  useMissionClock.ts  useTerminalSize.ts
tui/src/utils/: requestPanel.ts
