[package]
name = "brrmmmm"
version = "0.1.0"
edition = "2024"
description = "Standalone sidecar runner CLI for VZGLYD sidecar WASM modules"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vzglyd/brrmmmm"
homepage = "https://github.com/vzglyd/brrmmmm"
documentation = "https://docs.rs/brrmmmm"
readme = "README.md"
exclude = [
    ".codex",
    ".github",
    "demos",
    "docs",
    "sidecars",
    "tui",
]

[[bin]]
name = "brrmmmm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
wasmtime = { version = "32", features = ["component-model"] }
wasmtime-wasi = "32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime", "bytes"] }
futures = "0.3"
anyhow = "1"
thiserror = "2"
dirs = "6"
ctrlc = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
base64 = "0.22"
ed25519-dalek = "2"
getrandom = "0.3"
sha2 = "0.10"
bitflags = "2"
