[package]
name = "brrmmmm"
version = "0.1.0"
edition = "2024"
description = "Acquisition runtime for portable WASM mission modules"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/brrmmmm"
readme = "README.md"
exclude = [
    ".codex",
    ".github",
    "demos",
    "docs",
    "missions",
    "tui",
]

[[bin]]
name = "brrmmmm"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
wasmtime = { version = "44", features = ["component-model"] }
wasmtime-wasi = "44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
tokio = { version = "1", features = ["full"] }
chromiumoxide = { version = "0.9", default-features = false, features = ["bytes"] }
futures = "0.3"
anyhow = "1"
thiserror = "2"
dirs = "6"
ctrlc = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
base64 = "0.22"
ed25519-dalek = "2"
getrandom = "0.4"
sha2 = "0.11"
bitflags = "2"
